# azkv-ssh-fetch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/azkv_ssh_fetch/: __init__.py  __main__.py  bastion.py  cli.py  errors.py  keyvault.py  ssh.py
tests/: conftest.py  test_cli.py  test_cli_connect.py  test_keyvault.py  test_keyvault_vcr.py  test_ssh.py
tests/cassettes/: README.md
tests/cassettes/test_keyvault_vcr/: test_fetch_secret_replays_recorded_call.yaml  test_list_secrets_replays_recorded_call.yaml
