[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "azkv-ssh-fetch"
version = "0.1.1"
description = "Fetch SSH private keys from Azure Key Vault and connect to VMs/VMSS via Bastion."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Naeem Hossain", email = "naeemhossain.mail@gmail.com" }]
keywords = ["azure", "ssh", "key-vault", "bastion", "vmss", "devops"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "azure-identity>=1.17",
  "azure-keyvault-secrets>=4.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.12",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/NaeemH/azkv-ssh-fetch"
Repository = "https://github.com/NaeemH/azkv-ssh-fetch"
Issues = "https://github.com/NaeemH/azkv-ssh-fetch/issues"

[project.scripts]
azkv-ssh-fetch = "azkv_ssh_fetch.cli:app"
akf = "azkv_ssh_fetch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/azkv_ssh_fetch"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = ["E501"] # handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=azkv_ssh_fetch --cov-report=term-missing"
testpaths = ["tests"]
